# LVGL_SDL_SIM

./: CMakeLists.txt  Makefile  README.md  lv_conf.h  main.cpp
widgets/: CMakeLists.txt
widgets/cubic_bezier/: CMakeLists.txt  cubic_bezier_widget.cpp  cubic_bezier_widget.h
widgets/temp/: CMakeLists.txt  temp_widget.cpp  temp_widget.h
